pages/dkp/konvoy/1.4/reference/command-line-interface/konvoy-deploy/konvoy-deploy-kubernetes/index.md
---
layout: layout.pug
navigationTitle: konvoy deploy kubernetes
title: konvoy deploy kubernetes
menuWeight: 10
notes: Automatically generated, DO NOT EDIT
enterprise: false
excerpt: Deploy a Kubernetes cluster except CNI plugins (use 'deploy container-networking' to deploy those)
---

## konvoy deploy kubernetes

Deploy a Kubernetes cluster except CNI plugins (use 'deploy container-networking' to deploy those)

### Synopsis

Deploy a Kubernetes cluster except CNI plugins (use 'deploy container-networking' to deploy those)

```
konvoy deploy kubernetes [flags]
```

### Options

```
      --force-upgrade      run an upgrade on all nodes that require it, ignoring upgrade safety checks
  -h, --help               help for kubernetes
      --upgrade            run an upgrade on all nodes that require it
      --verbose            enable to debug level logging
      --without-draining   run an upgrade on all nodes that require it, without draining the nodes first (requires --upgrade or --force-upgrade flag) (WARNING! usage can result in undefined behavior and service downtime)
  -y, --yes                run command without prompting
```

### SEE ALSO

* [konvoy deploy](../)	 - Deploy a fully functioning Kubernetes cluster and addons

###### Auto generated by spf13/cobra on 31-Mar-2020
